# kiro-night

./: PROMPT.md  README.md
spec/: .env.example  README.md  main.py  pyproject.toml  test_agent.py  test_integration.py  test_manager.py  test_models.py  test_store.py
spec/.kiro/specs/task-management-assistant/: .config.kiro  design.md  requirements.md  tasks.md
spec/task_assistant/: __init__.py  agent.py  config.py  exceptions.py  manager.py  models.py  store.py
vibe/: README.md  demo_tools.py  pyproject.toml  task_agent.py  tasks.md  test_agent.py
